--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Liam Campbell Portfolio</title>
+  <title>Liam Campbell Portfolio Website</title>
 </head>
 <body>
-  
+  <div id="'root"></div>
 </body>
 </html>
