--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Liam Campbell Portfolio Website</title><script defer="defer" src="/react-portfolio/static/js/main.18aaeb03.js"></script><link href="/react-portfolio/static/css/main.46d38a47.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!doctype html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+          <meta name="viewport" content="width=device-width,initial-scale=1">
+        <title>Liam Campbell Portfolio Website</title>
+        <script defer="defer" src="/react-portfolio/static/js/main.18aaeb03.js"></script>
+        <link href="/react-portfolio/static/css/main.46d38a47.css" rel="stylesheet">
+    </head>
+    <body>
+      <div id="root">
+      </div>
+    </body>
+  </html>
