--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <!-- <meta http-equiv="Permissions-Policy" content="interest-cohort=()"> -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Liam Campbell Portfolio Website</title>
+  <title>Liam Campbell Software Developer React Website</title>
 </head>
 <body>
   <div id="root"></div>
